<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_35_fr_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_05_fr_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_95_fr_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_65_fr_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_02_fr_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <View
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:background="#25011DDF"
        android:elevation="@dimen/dimen_3dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_35_fr_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_65_fr_home"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="7dp"
        android:background="@drawable/shape_simple_gradient"
        android:elevation="@dimen/dimen_3dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_35_fr_home"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_65_fr_home"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageFilterButton2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:elevation="@dimen/dimen_2dp"
        android:foreground="@drawable/shape_home_image_forground"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_35_fr_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mountain" />

    <TextView
        android:id="@+id/txt_your_things_fr_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_14dp"
        android:elevation="@dimen/dimen_5dp"
        android:fontFamily="@font/cinzel_bold"
        android:text="@string/your_todos"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_35_fr_home"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_05_fr_home"
        app:layout_constraintTop_toBottomOf="@id/img_nav_drawer_fr_home"
        app:layout_constraintVertical_bias="0.20" />

    <TextView
        android:id="@+id/txt_date_fr_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_14dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:elevation="@dimen/dimen_5dp"
        android:fontFamily="serif"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_14dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_35_fr_home"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_05_fr_home" />

    <TextView
        android:id="@+id/txt_progress_fr_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_14dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:elevation="@dimen/dimen_5dp"
        android:fontFamily="serif"
        android:text="@string/progress_text"
        android:textColor="@color/whiteWith75Alpha"
        android:textSize="@dimen/dimen_14sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_35_fr_home"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_95_fr_home"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_65_fr_home" />

    <TextView
        android:id="@+id/txt_done_count_fr_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_5dp"
        android:text="20"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_24sp"
        app:layout_constraintBottom_toTopOf="@id/txt_done_fr_home"
        app:layout_constraintEnd_toEndOf="@id/txt_done_fr_home"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@id/txt_done_fr_home" />

    <TextView
        android:id="@+id/txt_total_count_fr_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_5dp"
        android:text="30"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_24sp"
        app:layout_constraintBottom_toTopOf="@id/txt_total_fr_home"
        app:layout_constraintEnd_toEndOf="@id/txt_total_fr_home"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@id/txt_total_fr_home" />

    <TextView
        android:id="@+id/txt_total_fr_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_5dp"
        android:fontFamily="serif"
        android:text="@string/total"
        android:textColor="@color/whiteWith75Alpha"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_35_fr_home"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_95_fr_home"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_done_fr_home"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_02_fr_home"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/txt_done_fr_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_14dp"
        android:elevation="@dimen/dimen_5dp"
        android:fontFamily="serif"
        android:text="@string/done"
        android:textColor="@color/whiteWith75Alpha"
        app:layout_constraintBottom_toBottomOf="@id/txt_total_fr_home"
        app:layout_constraintEnd_toStartOf="@+id/txt_total_fr_home"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_65_fr_home"
        app:layout_constraintTop_toTopOf="@id/txt_total_fr_home" />

    <TextView
        android:id="@+id/txt_list_title_fr_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:elevation="@dimen/dimen_5dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/todos"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/gray"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_05_fr_home"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_35_fr_home" />

    <ImageView
        android:id="@+id/img_nav_drawer_fr_home"
        android:layout_width="@dimen/dimen_24dp"
        android:layout_height="@dimen/dimen_32dp"
        android:elevation="@dimen/dimen_5dp"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_05_fr_home"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_02_fr_home"
        app:srcCompat="@drawable/ic_nav_drawer" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/white"
        app:srcCompat="@drawable/ic_add"
        app:tint="@android:color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginStart="@dimen/dimen_14dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_95_fr_home"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_05_fr_home"
        app:layout_constraintTop_toBottomOf="@id/txt_list_title_fr_home"
        tools:listitem="@layout/todos_rv_item" />
</androidx.constraintlayout.widget.ConstraintLayout>